Bug 332273 - starting a movie from Dolphin does not work when Dragon Player is already open
Summary: starting a movie from Dolphin does not work when Dragon Player is already open
Status: RESOLVED FIXED
Alias: None
Product: dragonplayer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-18 09:04 UTC by m.wege
Modified: 2014-03-19 14:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2014-03-18 09:04:25 UTC
When I start a movie in Dolphin for playing it in Dragon Player, the movie does not start when Dragon Player is already running. Just nothing happens. If I close Dragon Player and repeat the procedure, it works fine.

Reproducible: Always
Comment 1 Harald Sitter 2014-03-18 10:40:00 UTC
I absolutely cannot reproduce this with 4.13.

What version of kdelibs are you on?
Comment 2 m.wege 2014-03-18 10:46:58 UTC
4.12.3
Comment 3 Harald Sitter 2014-03-18 12:10:41 UTC
hit alt+f2 -> enter 'kdebugdialog' -> hit enter -> click on 'select all' -> apply and close

please kill all dragons and do the following in a terminal, it will create a log file in your home directory that you can attach to this bug report:

export PHONON_DEBUG=5
export PHONON_BACKEND_DEBUG=5
export PHONON_SUBSYSTEM_DEBUG=2
export PHONON_PULSEAUDIO_DEBUG=5
export PHONON_VLC_DEBUG=5
export PHONON_GST_DEBUG=5
dragon --nofork &> ~/dragon.log

dragon player will open

now try to open a video via dolphin
does it play?

do not close dragon and try another file
does it play?

you can now close dragon and attach the generated file 'dragon.log' to this bug report.

Thanks.
Comment 4 m.wege 2014-03-19 06:55:40 UTC
I have to correct myself in the description on how to reproduce the bug. It does not happen always. It happens if:
- Dragon is started and running
- Movie is playing/has been played
- KDE/System is shut down.
- Dragon is restored on session restoration
- Then I start a movie from Dolphin.
Comment 5 Harald Sitter 2014-03-19 13:18:54 UTC
Git commit 441962391e103505cd8e34d16ca12b4a70f05c8f by Harald Sitter.
Committed on 19/03/2014 at 13:18.
Pushed by sitter into branch 'KDE/4.13'.

use right function to check for restoration

helps a bunch with not getting states messed up

FIXED-IN: 4.13.0

M  +1    -1    src/app/playerApplication.cpp

http://commits.kde.org/dragon/441962391e103505cd8e34d16ca12b4a70f05c8f
Comment 6 m.wege 2014-03-19 14:05:40 UTC
Great, thanks!