use right function to check for restoration

helps a bunch with not getting states messed up

FIXED-IN: 4.13.0
BUG: 332273